# virtual-perturbation-evaluator

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  mamba.yaml  mlp.yaml  transformer.yaml
data/splits/: gene_split_seed42.json  synthetic_split.json
scripts/: _bootstrap.py  ablation.py  evaluate_official.py  investigate_pca.py  make_synthetic_data.py  predict.py  preprocess.py  smoke_test.py  train.py
src/vcell/: data.py  metrics.py  utils.py
src/vcell/models/: factory.py  mamba.py  transformer.py
