[project]
name = "virtual-perturbation-evaluator"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "anndata>=0.11.4",
    "huggingface-hub[cli]>=1.16.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "scvi-tools>=1.3.3",
    "torch==2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
